--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     mongodb:
       uri: mongodb+srv://admin:admin@entrei-cluster.tygkjty.mongodb.net/entrei?retryWrites=true&w=majority
       auto-index-creation: true
+      uuid-representation: standard
 
 spring-doc:
   api-docs:
